fixed margin spacing

--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@ p {
 	font-family: Helvetica, sans-serif;
 	font-size: 1.2em;
 	margin-bottom: 12%;
+
 }
 
 
@@ -131,7 +132,7 @@ h2 {
 
 #contact {
 	position:absolute;
-	top: 300%;
+	top: 335%;
 	margin-bottom: 0;
 	background-color: #009999;
 	height: 200px;
@@ -163,7 +164,7 @@ h4{
 
 #activities {
 	position: absolute;
-	top:200%;
+	top:215%;
 
 }
 .actImg {
